// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

// generator client {
//   provider = "prisma-client"
//   output   = "../generated/prisma"
// }

// generator client {
// provider      = "prisma-client-js"
// binaryTargets = ["native", "linux-musl", "rhel-openssl-3.0.x"]
//   // engineType = "client"]
// }


generator client {
  provider      = "prisma-client-js"
  binaryTargets =  ["native", "rhel-openssl-3.0.x", "debian-openssl-3.0.x"]
  // ["native", "rhel-openssl-3.0.x"]
  output        = "../node_modules/.prisma/client"
}

// generator erd {
//   provider = "prisma-erd-generator"
//   output = "./erd.svg"
// }

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}


model Account {
  id                String  @id @default(auto()) @map("_id") @db.ObjectId
  userId            String  @db.ObjectId
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.String
  access_token      String? @db.String
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.String
  session_state     String?
 
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
 
  @@unique([provider, providerAccountId])
}
 
model Session {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  sessionToken String   @unique
  userId       String   @db.ObjectId
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}
 
enum UserRole {
  USER
  ADMIN
  PSICOLOGO
}

enum AppointmentStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
}

enum AppointmentType {
  ONLINE
  PRESENCIAL
}

enum PsychiatricFollowUp {
  NAO
  SIM
  JA_FEZ
}
 
model User {
  id                    String        @id @default(auto()) @map("_id") @db.ObjectId
  name                  String
  email                 String        @unique
  phone                 String
  emailVerified         DateTime?
  image                 String?
  role                  UserRole      @default(USER)
  password              String
  plainPassword         String?       // Senha em texto plano (apenas para visualização no admin)
  resetPasswordToken    String?       // Token para redefinição de senha
  resetPasswordExpires  DateTime?     // Data de expiração do token de redefinição
  accounts              Account[]
  sessions              Session[]
  isVerfied             Boolean       @default(false)
  token                 Int
  createdAt             DateTime      @default(now())
  updatedAt             DateTime      @updatedAt
  
  // Professional data (for PSICOLOGO role)
  crp                   String?       // Registro no CRP
  specialization        String?       // Especialização
  bio                   String?       // Biografia profissional
  experience           Int?          // Anos de experiência
  languages             String[]      // Idiomas falados
  specialties           String[]     // Especialidades
  accessToken           String?       // Token único para acesso ao dashboard (pode ser null para usuários regulares)
  
  // Appointments relations
  appointmentsAsPsychologist Appointment[]         @relation("PsychologistAppointments")
  appointmentsAsPatient      Appointment[]         @relation("PatientAppointments")
  
  // Medical Records relations
  medicalRecordsAsPatient    MedicalRecord[]       @relation("PatientRecords")
  medicalRecordsAsPsychologist MedicalRecord[]     @relation("PsychologistRecords")
  
  // Other relations
  reminders                  Reminder[]            @relation("UserReminders")
  psychologistSettings       PsychologistSettings? @relation("PsychologistSettings")
  bankAccount                BankAccount?          @relation("UserBankAccount")
  clinic                     Clinic?               @relation("ClinicProfessionals", fields: [clinicId], references: [id], onDelete: SetNull)
  clinicId                   String?               @db.ObjectId
  availabilities             Availability[]        @relation("PsychologistAvailabilities")
  sentMessages               ChatMessage[]         @relation("SentMessages")
  receivedMessages           ChatMessage[]         @relation("ReceivedMessages")
  withdrawals                Withdrawal[]          @relation("PsychologistWithdrawals")
}

model Appointment {
  id              String            @id @default(auto()) @map("_id") @db.ObjectId
  psychologistId  String            @db.ObjectId
  patientId       String?           @db.ObjectId
  date            DateTime
  startTime       String            // formato HH:mm
  endTime         String            // formato HH:mm
  duration        Int               // em minutos
  status          AppointmentStatus @default(PENDING)
  type            AppointmentType   @default(ONLINE)
  notes           String?
  price           Float?
  meetingLink     String?           // Link da sala virtual
  reminderSent    Boolean           @default(false)
  
  psychologist    User              @relation("PsychologistAppointments", fields: [psychologistId], references: [id], onDelete: Cascade)
  patient         User?             @relation("PatientAppointments", fields: [patientId], references: [id], onDelete: SetNull)
  medicalRecord   MedicalRecord?    @relation("AppointmentRecord")
  payment         Payment?          @relation("AppointmentPayment")
  
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  
  @@index([psychologistId])
  @@index([patientId])
  @@index([date])
  @@index([status])
}

// Prontuário Eletrônico
model MedicalRecord {
  id                    String              @id @default(auto()) @map("_id") @db.ObjectId
  appointmentId         String              @unique @db.ObjectId
  patientId             String              @db.ObjectId
  psychologistId        String              @db.ObjectId
  
  chiefComplaint        String              // Queixa principal
  diagnosis             String?             // Diagnóstico
  treatment             String?             // Tratamento/Intervenção
  observations          String?             // Observações da sessão
  evolution             String?             // Evolução do paciente
  prescription          String?             // Prescrição/Recomendações
  psychiatricFollowUp   PsychiatricFollowUp?

  appointment           Appointment         @relation("AppointmentRecord", fields: [appointmentId], references: [id], onDelete: Cascade)
  patient               User                @relation("PatientRecords", fields: [patientId], references: [id], onDelete: Cascade)
  psychologist          User                @relation("PsychologistRecords", fields: [psychologistId], references: [id], onDelete: Cascade)

  createdAt             DateTime            @default(now())
  updatedAt             DateTime            @updatedAt

  @@index([patientId])
  @@index([psychologistId])
}

enum PaymentStatus {
  PENDING
  PAID
  CANCELLED
  REFUNDED
}

enum PaymentMethod {
  PIX
  CREDIT_CARD
  DEBIT_CARD
  BANK_TRANSFER
  CASH
}

model Payment {
  id            String        @id @default(auto()) @map("_id") @db.ObjectId
  appointmentId String        @unique @db.ObjectId
  amount          Float
  status          PaymentStatus @default(PENDING)
  method          PaymentMethod?
  transactionId   String?
  paidAt          DateTime?
  
  appointment     Appointment   @relation("AppointmentPayment", fields: [appointmentId], references: [id], onDelete: Cascade)
  
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  
  @@index([status])
  @@index([paidAt])
}

// Saques/Retiradas do Profissional
enum WithdrawalStatus {
  PENDING
  PROCESSING
  COMPLETED
  CANCELLED
  REJECTED
}

model Withdrawal {
  id              String          @id @default(auto()) @map("_id") @db.ObjectId
  psychologistId  String          @db.ObjectId
  amount          Float           // Valor do saque
  status          WithdrawalStatus @default(PENDING)
  method          String?         // Método de saque (PIX, BANK_TRANSFER)
  bankAccountId   String?         @db.ObjectId // Referência aos dados bancários
  notes           String?         // Observações/notas
  processedAt     DateTime?       // Data em que foi processado
  cancelledAt     DateTime?       // Data em que foi cancelado
  
  psychologist    User            @relation("PsychologistWithdrawals", fields: [psychologistId], references: [id], onDelete: Cascade)
  bankAccount     BankAccount?    @relation("WithdrawalBankAccount", fields: [bankAccountId], references: [id], onDelete: SetNull)
  
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
  
  @@index([psychologistId])
  @@index([status])
  @@index([createdAt])
}

// Lembretes e Notificações
enum ReminderType {
  EMAIL
  SMS
  WHATSAPP
}

model Reminder {
  id              String       @id @default(auto()) @map("_id") @db.ObjectId
  appointmentId   String       @db.ObjectId
  userId          String       @db.ObjectId
  type            ReminderType
  scheduledFor    DateTime
  sent            Boolean      @default(false)
  sentAt          DateTime?
  message         String
  
  user            User         @relation("UserReminders", fields: [userId], references: [id], onDelete: Cascade)
  
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt
  
  @@index([appointmentId])
  @@index([userId])
  @@index([scheduledFor])
  @@index([sent])
}

// Chat entre Paciente e Psicólogo
model ChatMessage {
  id              String   @id @default(auto()) @map("_id") @db.ObjectId
  senderId        String   @db.ObjectId
  receiverId      String   @db.ObjectId
  message         String
  read            Boolean  @default(false)
  readAt          DateTime?
  
  sender          User     @relation("SentMessages", fields: [senderId], references: [id], onDelete: Cascade)
  receiver        User     @relation("ReceivedMessages", fields: [receiverId], references: [id], onDelete: Cascade)
  
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  
  @@index([senderId])
  @@index([receiverId])
  @@index([createdAt])
}

// Configurações de Personalização
model PsychologistSettings {
  id                    String   @id @default(auto()) @map("_id") @db.ObjectId
  psychologistId        String   @unique @db.ObjectId
  
  workingHoursStart     String   @default("08:00")
  workingHoursEnd       String   @default("18:00")
  defaultSessionDuration Int     @default(60)
  defaultPrice          Float    @default(150.0)
  acceptOnlineAppointments Boolean @default(true)
  acceptInPersonAppointments Boolean @default(true)
  autoConfirmAppointments Boolean @default(false)
  enableCheckout        Boolean  @default(true) // Ativar/desativar checkout de pagamento
  pixKey                String?  // Chave PIX do profissional para gerar QR Code
  
  bio                   String?
  specialties           String[]
  languages             String[]
  
  psychologist          User     @relation("PsychologistSettings", fields: [psychologistId], references: [id], onDelete: Cascade)
  
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
}

// Disponibilidade por data do psicólogo
model Availability {
  id              String   @id @default(auto()) @map("_id") @db.ObjectId
  psychologistId  String   @db.ObjectId
  date            DateTime  // Data da disponibilidade
  availableSlots String[]  // Array de horários disponíveis no formato ["08:00", "09:00", ...]
  isAvailable     Boolean  @default(true) // Se false, o dia inteiro está indisponível
  
  psychologist    User     @relation("PsychologistAvailabilities", fields: [psychologistId], references: [id], onDelete: Cascade)
  
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  
  @@unique([psychologistId, date])
  @@index([psychologistId])
  @@index([date])
}

// Dados Bancários do Profissional
model BankAccount {
  id              String   @id @default(auto()) @map("_id") @db.ObjectId
  userId          String   @unique @db.ObjectId
  
  // Método de recebimento preferido
  paymentMethod   String?  // "BANK_ACCOUNT" ou "PIX"
  
  // Dados bancários
  bankName        String?  // Nome do banco
  agency          String?  // Agência
  account         String?  // Conta corrente/poupança
  accountType     String?  // Tipo de conta (CORRENTE, POUPANCA)
  
  // PIX
  pixKey          String?  // Chave PIX
  pixKeyType      String?  // Tipo: CPF, EMAIL, TELEFONE, ALEATORIA
  
  // Dados do titular
  accountHolderName String? // Nome do titular
  cpf             String?  // CPF do titular
  
  user            User     @relation("UserBankAccount", fields: [userId], references: [id], onDelete: Cascade)
  withdrawals     Withdrawal[] @relation("WithdrawalBankAccount")
  
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

// Modelo de Clínica (CRUD)
model Clinic {
  id                    String   @id @default(auto()) @map("_id") @db.ObjectId
  
  // Informações da Clínica
  name                  String   // Nome da clínica
  email                 String?
  phone                 String?
  address               String?
  cnpj                  String?  @unique
  description           String?  // Descrição da clínica
  accessToken           String?  @unique // Token único para link de acesso/cadastro
  
  // Horários de Funcionamento
  workingDays           String[] // ["MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY"]
  workingHoursStart     String   @default("08:00")
  workingHoursEnd       String   @default("18:00")
  timezone              String   @default("America/Sao_Paulo")
  
  // Configurações de Agendamento
  minAdvanceBookingDays Int      @default(30)
  maxAdvanceBookingDays Int      @default(90)
  appointmentDuration   Int      @default(60) // Duração padrão em minutos
  cancellationDeadline  Int      @default(24) // Horas antes do agendamento
  
  // Configurações de Notificações
  enableEmailReminders  Boolean  @default(true)
  enableSMSReminders    Boolean  @default(false)
  reminderTimeBefore    Int      @default(24)
  
  // Configurações de Pagamento
  defaultPaymentMethod  String?  // PIX, CREDIT_CARD, etc.
  enableOnlinePayment   Boolean  @default(true)
  
  // Status
  isActive              Boolean  @default(true)
  
  // Relação com configurações
  settings              ClinicSettings?
  
  // Relação com profissionais
  professionals         User[]   @relation("ClinicProfessionals")
  
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
  
  @@index([name])
  @@index([isActive])
}

// Configurações Gerais da Clínica/Sistema (mantido para compatibilidade)
model ClinicSettings {
  id                    String   @id @default(auto()) @map("_id") @db.ObjectId
  clinicId              String?  @unique @db.ObjectId
  
  // Informações da Clínica (legado)
  clinicName            String   @default("AgilizaPSI")
  clinicEmail           String?
  clinicPhone           String?
  clinicAddress         String?
  clinicCNPJ            String?
  
  // Horários de Funcionamento
  workingDays           String[] // ["MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY"]
  workingHoursStart     String   @default("08:00")
  workingHoursEnd       String   @default("18:00")
  timezone              String   @default("America/Sao_Paulo")
  
  // Configurações de Agendamento
  minAdvanceBookingDays Int      @default(30) // Dias mínimos de antecedência
  maxAdvanceBookingDays Int      @default(90) // Dias máximos de antecedência
  appointmentDuration   Int      @default(60) // Duração padrão em minutos
  cancellationDeadline  Int      @default(24) // Horas antes do agendamento para cancelar
  
  // Configurações de Notificações
  enableEmailReminders  Boolean  @default(true)
  enableSMSReminders    Boolean  @default(false)
  reminderTimeBefore    Int      @default(24) // Horas antes do agendamento
  
  // Configurações de Pagamento
  defaultPaymentMethod  String?  // PIX, CREDIT_CARD, etc.
  enableOnlinePayment   Boolean  @default(true)
  platformPixKey       String?  // Chave PIX da plataforma para receber pagamentos dos pacientes
  
  // Configurações Gerais
  maintenanceMode       Boolean  @default(false)
  allowPublicRegistration Boolean @default(true)
  requireEmailVerification Boolean @default(true)
  
  // Políticas e Termos
  termsOfService        String?
  privacyPolicy         String?
  cancellationPolicy    String?
  
  clinic                Clinic?  @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
}
 
 
